--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,25 +1,33 @@
 name: Python CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version:
+          - 3.6
+          - 3.7
+          - 3.8
+          - 3.9
+          - 3.10
     steps:
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
 
-    - name: Checkout code
-      uses: actions/checkout@v2
-
+    # Add more steps here, such as installing dependencies and running tests.
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        python -m unittest discover
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+- name: Run tests
+  run: |
+    pytest
