--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,15 +12,17 @@ jobs:
     strategy:
       matrix:
         python-version:
+          - 3.6.x
+          - 3.7.x
           - 3.8.x
           - 3.9.x
           - 3.10.x
-          - 3.11.x
     steps:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+        node-version: 16
 
     # Add more steps here, such as installing dependencies and running tests.
     - name: Install dependencies
