--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,9 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
+    # strategy:
+      # matrix:
+        # python-version: [3.7, 3.8, 3.9]
     steps:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
