--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,28 +1,25 @@
 name: Python CI
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    # strategy:
-      # matrix:
-        # python-version: [3.7, 3.8, 3.9]
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
 
-    # Add more steps here, such as installing dependencies and running tests.
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ../requirements.txt
+        pip install -r requirements.txt
+
     - name: Run tests
       run: |
-        pytest
+        python -m unittest discover
