--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,21 +5,20 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: [3.7,3.8,3.9]
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        python -m unittest discover
+      - uses: actions/checkout@v3
+      - name: set up Python ${{ matrix.python-version }} 
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }} 
+      - name: install packages
+        run: make install
+      - name: lint
+        run: make lint
+      - name: test
+        run: make test
+      - name: format
+        run: make format
